tests/duarouter/flows/errors/vehicle_empty_arrivallane/errors.duarouter
Error: Attribute 'arrivalLane' in definition of flow '0' is empty.
Error: Invalid arrivalLane definition for flow '0';
 must be one of ("current", or an int>=0)
Quitting (on error).
